# flakjack

./: Dockerfile  README.md  setup.cfg  setup.py
docs/: experiments.md
docs/seeds/nm/: binutils_objdump_integer_overflow_display_debug_ranges.elf
flakjack/: __main__.py  fuzzer.py  project.py  utils.py
flakjack/patch_generator/: __init__.py  exceptions.py  gdb_wrapper.py  patch_generator.py
tests/: tests.py
tests/data/bins/: binary-for-double-ret-patch  binary-for-ret-patch  readelf  readelf-for-rip-relative-addressing  tiffcp  tiffcp-for-crash-in-patch-section
tests/data/crashing_inputs/: ffmpeg-sigsegv-disp-test-crash-inp  inchi-bcmp-crash  mp4box-desync-exec  mp4box-mem-write-sigsegv  mp4box_sigsegv_memcpy  nm_low_byte_access_check  nm_sigfpe_div0_mem  nm_sigfpe_div0_reg  nm_sigsegv_deref_rbp  nm_sigsegv_deref_rcx_rax  nm_sigsegv_deref_rdi  nm_sigsegv_strchr  readelf-sigfpe-rip-relative-addressing  tiffcp-crash-in-patch-section
tests/data/patches/mp4box-mem-write-sigsegv/: 1.patch  2-1.patch  2-2.patch  3.patch  4.patch  5.patch  6.patch  7.patch  8-1.patch  8-2.patch
tests/data/patches/readelf-rip-relative-addressing/: 1.patch  2.patch  3.patch  4.patch
tests/data/src/: binary-for-ret-patch.c
