[metadata]
name="flakjack",
version="0.1",
description="FlakJack",

[options]
install_requires=
    # Pin ROPgadget to version that works with capstone version angr needs
    ROPgadget==7.3
    pwntools==4.11.0
    patcherex
    phuzzer
    psutil

python_requires = >= 3.10
include_package_data = True
packages = find:
